--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test-npm-package",
   "version": "0.0.1",
-  "description": "test packge is ready",
+  "description": "test packge is ready to deploy",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
